trained on randomness of 4, batch size of 80, epochs 65 and changed indices on specific protein in ipynb file

--- a/structured/tests/PlayGround.ipynb
+++ b/structured/tests/PlayGround.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "NaN                                       [O-]S(=O)(=O)[O-]  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "7           5G3N    NaN    NaN  NaN"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "[17 rows x 4 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1276,25 +1276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "READY\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.loc[data.Metric.isin([\"Kd\", \"ic50\", \"Ki\"])].Metric.value_counts()\n",
-    "print(\"READY\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1346,7 @@
        "Name: Metric, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,21 +1365,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3362 (9403, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(unique), data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Representative</th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Num</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4YV5</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>6.200</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1HN4</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>mM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3QLM</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>15.800</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5G3N</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>0.012</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1KVO</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1J1A</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4UY1</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>20.000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277</th>\n",
+       "      <td>3F5L</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>0.191</td>\n",
+       "      <td>mM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>2O9R</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>21.000</td>\n",
+       "      <td>mM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>5BX3</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>0.130</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>5BX4</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>0.340</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>5BX5</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>mM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>5HLD</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>64.300</td>\n",
+       "      <td>nM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>5HLB</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>64.300</td>\n",
+       "      <td>nM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Representative Metric     Num Unit\n",
+       "1             4YV5     Kd   6.200   uM\n",
+       "4             1HN4     Kd   0.150   mM\n",
+       "6             3QLM     Ki  15.800   uM\n",
+       "8             5G3N   ic50   0.012   uM\n",
+       "11            1KVO   ic50   0.013   uM\n",
+       "18            1J1A   ic50   0.029   uM\n",
+       "21            4UY1   ic50  20.000   uM\n",
+       "..             ...    ...     ...  ...\n",
+       "277           3F5L     Ki   0.191   mM\n",
+       "280           2O9R     Ki  21.000   mM\n",
+       "282           5BX3     Ki   0.130   uM\n",
+       "284           5BX4     Ki   0.340   uM\n",
+       "286           5BX5     Ki   4.000   mM\n",
+       "288           5HLD   ic50  64.300   nM\n",
+       "290           5HLB   ic50  64.300   nM\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop(\"index\", axis = \"columns\", inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Representative</th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Num</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4YV5</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>6.200000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1HN4</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>0.150000</td>\n",
+       "      <td>mM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3QLM</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>15.800000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5G3N</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>0.012000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1KVO</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>0.013000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1J1A</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>0.029000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4UY1</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5G3M</td>\n",
+       "      <td>ic50</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1JQ9</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>3.570000</td>\n",
+       "      <td>nM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2QVD</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2ARM</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>7.400000</td>\n",
+       "      <td>nM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1FV0</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>1.180000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1Q7A</td>\n",
+       "      <td>Kd</td>\n",
+       "      <td>0.064000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1KPM</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>1.590000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1JQ8</td>\n",
+       "      <td>Ki</td>\n",
+       "      <td>1.010000</td>\n",
+       "      <td>uM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Representative Metric        Num Unit\n",
+       "0            4YV5     Kd   6.200000   uM\n",
+       "1            1HN4     Kd   0.150000   mM\n",
+       "2            3QLM     Ki  15.800000   uM\n",
+       "3            5G3N   ic50   0.012000   uM\n",
+       "4            1KVO   ic50   0.013000   uM\n",
+       "5            1J1A   ic50   0.029000   uM\n",
+       "6            4UY1   ic50  20.000000   uM\n",
+       "7            5G3M   ic50  24.000000   uM\n",
+       "8            1JQ9     Kd   3.570000   nM\n",
+       "9            2QVD     Kd   0.000001    M\n",
+       "10           2ARM     Ki   7.400000   nM\n",
+       "11           1FV0     Kd   1.180000   uM\n",
+       "12           1Q7A     Kd   0.064000   uM\n",
+       "13           1KPM     Ki   1.590000   uM\n",
+       "14           1JQ8     Ki   1.010000   uM"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 4)"
+       "ic50    862\n",
+       "Ki      188\n",
+       "Kd      138\n",
+       "Name: Metric, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data.loc[data.Representative.isin(unique)].Metric.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(os.path.abspath(\"formatted_binding.csv\"))"
+   ]
   },
   {
    "cell_type": "code",
