--- a/structured/tests/PlayGround.ipynb
+++ b/structured/tests/PlayGround.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "NaN                                       [O-]S(=O)(=O)[O-]  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "7           5G3N    NaN    NaN  NaN"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "[17 rows x 4 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
        "Name: Metric, dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
        "14           1JQ8     Ki   1.010000   uM"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,30 +1743,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "ic50    862\n",
-       "Ki      188\n",
        "Kd      138\n",
        "Name: Metric, dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.loc[data.Representative.isin(unique)].Metric.value_counts()"
+    "data.loc[data.Representative.isin(unique)].Metric.value_counts().loc[[\"ic50\", \"Kd\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
